--- a/src/components/ArticlesContainer.css
+++ b/src/components/ArticlesContainer.css
@@ -1,7 +1,7 @@
 .articles-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    grid-row-gap: 1rem;
-    padding: 0 0.8rem;
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 2rem;
+    padding: 0 2rem;
 }
