--- a/Mern-Blog-Frontend/src/components/Article.css
+++ b/Mern-Blog-Frontend/src/components/Article.css
@@ -1,13 +1,19 @@
 .article-container {
-    height: 42vh;
+    height: 37vh;
+    color: rgb(71, 71, 71);
     border-radius: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
+.article-container:hover * {
+    cursor: pointer;
+}
+
 .article-img {
-    height: 55%;
+    height: 60%;
     overflow: hidden;
     border-radius: 5px 5px 2px 2px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
@@ -21,20 +27,32 @@
 
 .article-container:hover img {
     transform: scale(1.1,1.1);
-    /* filter: brightness(95%); */
 }
 
 .article-title {
     padding: 5px 5px 3px 9px;
+    width: 280px;
+    overflow: hidden;
+    line-height: 1.2rem;
+}
+
+.article-title h4 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    max-height: 3.6em;
+    word-wrap: break-all;
+    hyphens: auto;
 }
 
 .article-author {
     padding: 1px 5px 1px 9px;
-    font-size: 18px;
+    font-size: 19px;
 }
 
 .article-pub__date {
     padding: 3px 5px 3px 9px;
-    font-size: 12px;
+    font-size: 11.5px;
     font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
