--- a/Mern-Blog-Frontend/src/components/CommentForm.css
+++ b/Mern-Blog-Frontend/src/components/CommentForm.css
@@ -1,13 +1,19 @@
 .comment-form {
     padding: 0.3rem 0.5rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
     font-family: 'Roboto', sans-serif;
     border-radius: 4px;
-    background-image: linear-gradient(to right, #ec008c, #fc6767);
+    border: 1px solid darkgray;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    /* background-image: linear-gradient(to right, #ec008c, #fc6767); */
 }
 
 .comment-form h2 {
-    color: white;
-    padding: 0.3rem 0.8rem;
+    padding: 0.8rem 0.8rem;
+    text-align: center;
+    font-family: 'Bubblegum Sans', cursive;
+
 }
 
 .user-info-container {
@@ -25,7 +31,6 @@
 .user-info label {
     display: block;
     font-weight: 500;
-    color: white;
     margin-bottom: 0.2rem;
 }
 
@@ -34,9 +39,9 @@
     width: 100%;
     display: block;
     padding: 0.3rem;
-    font-weight: bold;
-    border: 2px solid rgb(255, 82, 255);
+    font-weight: 400;
     border-radius: 5px;
+    border: 1px solid darkgray;
     color: rgb(54, 54, 54);
 }
 
@@ -50,7 +55,6 @@
 }
 
 .commentbox-container label {
-    color: white;
     font-weight: 500;
 }
 
@@ -59,9 +63,9 @@
     padding: 0.3rem;
     margin-top: 0.3rem;
     font-size: 0.9rem;
-    font-weight: 500;
-    border: 2px solid rgb(255, 82, 255);
+    font-weight: 400;
     border-radius: 5px;
+    border: 1px solid darkgray;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -81,6 +85,7 @@
     border: 2px solid white;
     border-radius: 5px;
     color: white;
+    cursor: pointer;
     font-weight: bold;
     background-image: linear-gradient(to right, #ec008c, #fc6767);
 }
